--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,7 @@ body {
 }
 
 header {
-	width: calc(100vw - 75px);
+	width: calc(100vw - px);
 	height: 60px;
 	display: flex;
 	flex-direction: row;
@@ -53,7 +53,7 @@ header {
 }
 
 footer {
-	width: calc(100vw - 100px);
+	width: calc(100vw - px);
 	height: 150px;
 	display: flex;
 	flex-direction: row;
@@ -89,4 +89,78 @@ footer {
 	width:  50px;
 	height: 50px;
 	margin: 10px;
+}
+.ad-content {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-evenly;
+	height: inherit;
+}
+
+h3 {
+	font-size: 20px;
+	color: white;
+	text-align: center;
+	width: calc(100vw - 400px);
+	min-width: 500px;
+}
+h1 {
+	font-size: 60px;
+	font-weight: bold;
+	color:rgb(233, 132, 0);
+	width: max-content;
+}
+
+button {
+	background-color: rgb(56, 104, 104);
+	border: none;
+	height: 30px;
+	width: 100px;
+	color: white;
+}
+
+.recipe-card-container {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	flex-wrap: wrap;
+}
+.recipe-card {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	color: #423f3f;
+	margin: 20px;
+	box-shadow: 0px 2px 5px;
+}
+.recipe-card-values {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-evenly;
+
+	height: 100px;
+}
+
+
+
+.search-section {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+.search-bar-container {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	background-color: rgb(230, 159, 67);
+	border-radius: 20px;
+	height: 30px;
+}
+.search-bar {
+	border: none;
+	background-color: rgb(230, 159, 67);
+	margin-right: 10px;
+
 }
