--- a/src/App.css
+++ b/src/App.css
@@ -35,12 +35,12 @@ header {
 	justify-content: space-between;
 	padding-left: 50px;
 	padding-right: 25px;
-	background-color: rgb(233, 132, 0);
+	background-color: #DA7635;
 	color: white;
 }
 
 .nav-button {
-	background-color: rgb(233, 132, 0);
+	background-color: #DA7635;
 	border: none;
 	color: white;
 	margin-left: 10px;
@@ -108,7 +108,7 @@ h3 {
 h1 {
 	font-size: 60px;
 	font-weight: bold;
-	color:rgb(233, 132, 0);
+	color: #DA7635;
 	width: max-content;
 }
 
@@ -154,13 +154,15 @@ button {
 	display: flex;
 	flex-direction: row;
 	align-items: center;
-	background-color: rgb(230, 159, 67);
+	justify-content: flex-end;
+	width: 200px;
+	background-color: rgb(255, 208, 147);
 	border-radius: 20px;
 	height: 30px;
 }
 .search-bar {
 	border: none;
-	background-color: rgb(230, 159, 67);
+	background-color: rgb(255, 208, 147);
 	margin-right: 10px;
 
 }
