--- a/src/App.css
+++ b/src/App.css
@@ -151,6 +151,7 @@ button {
 	align-items: center;
 }
 .search-bar-container {
+	margin-top: 20px;
 	display: flex;
 	flex-direction: row;
 	align-items: center;
