--- a/src/App.css
+++ b/src/App.css
@@ -167,3 +167,36 @@ button {
 	margin-right: 10px;
 
 }
+
+/* ---------------------------------------------DETAILS PAGE ------------------------------------- */
+
+.details-section {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-evenly;
+	align-items: flex-start;
+}
+
+.recipe-ingredients {
+	margin: 20px;
+	width: 300px;
+	min-height: 300px;
+	box-shadow: #423f3f 0px 2px 5px;
+	padding-left: 20px;
+	padding-right: 20px;
+}
+
+.recipe-details {
+	margin:  20px;
+	width: 450px;
+	min-height: 400px;
+	box-shadow: #423f3f 0px 2px 5px;
+	padding-left: 20px;
+	padding-right: 20px;
+}
+
+h2 {
+	text-align: center;
+	font-size: 30px;
+	margin: 20px;
+}
